--- a/yourThing/yourThing/Info.plist
+++ b/yourThing/yourThing/Info.plist
@@ -56,5 +56,7 @@
             </dict>
         </dict>
     </dict>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Show your location on the map</string>
 </dict>
 </plist>
