--- a/yourThing/yourThing/Info.plist
+++ b/yourThing/yourThing/Info.plist
@@ -58,5 +58,10 @@
     </dict>
     <key>NSLocationWhenInUseUsageDescription</key>
     <string>Show your location on the map</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>googlechromes</string>
+        <string>comgooglemaps</string>
+    </array>
 </dict>
 </plist>
